Refactor upgrade utilities for v2.0.0